force-app/main/default/objects/LLC_BI__Debt_Schedule__c/fields/LLC_BI__Bundle__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Bundle__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this required lookup field to the Underwriting Bundle. By default, it displays the associated bundle.</description>
    <label>Bundle</label>
    <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
    <relationshipLabel>Debt Schedules</relationshipLabel>
    <relationshipName>Debt_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>