force-app/main/default/objects/LLC_BI__Debt_Schedule__c/fields/LLC_BI__Debt_Filter_Syntax__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Debt_Filter_Syntax__c</fullName>
    <description>Administrators manually populate this optional long text field to determine which debts appear within a specific debt schedule. By default, it is blank.</description>
    <inlineHelpText>Populate this field with the syntax for the debts you want to include within the debt schedule.</inlineHelpText>
    <label>Debt Filter Syntax</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>