force-app/main/default/objects/LLC_BI__Debt_Schedule__c/fields/LLC_BI__Debt_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Debt_Schedule_Date__c</fullName>
    <description>Users populate this required date field with the Debt Schedule&apos;s date. By default, the system populates this field with the date the user initially creates the Debt Schedule.</description>
    <label>Debt Schedule Date</label>
    <type>DateTime</type>
</CustomField>