force-app/main/default/objects/LLC_BI__Debt_Schedule__c/fields/LLC_BI__Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Last_Updated__c</fullName>
    <description>This field is autopopulated with the date the Debt Schedule was last updated.</description>
    <label>Last Updated</label>
    <type>Date</type>
</CustomField>