force-app/main/default/objects/LLC_BI__Debt_Schedule__c/fields/LLC_BI__Relationship__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system populates this lookup field to associate a Debt Schedule to a relationship on the Relationship object.</description>
    <label>Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Debt Schedules</relationshipLabel>
    <relationshipName>Debt_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>