force-app/main/default/objects/LLC_BI__Debt_Schedule__c/fields/LLC_BI__Source_Debt_Schedule__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source_Debt_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field to the Debt Schedule it was cloned from. By default, it displays the associated Debt Schedule.</description>
    <label>Source Debt Schedule</label>
    <referenceTo>LLC_BI__Debt_Schedule__c</referenceTo>
    <relationshipLabel>Cloned Debt Schedules</relationshipLabel>
    <relationshipName>Cloned_Debt_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>