force-app/main/default/objects/LLC_BI__Debt_Schedule__c/fields/LLC_BI__Spread_Statement_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Period__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this optional lookup field to indicate the associated Spread Statement Period. By default, it is blank.</description>
    <label>Period</label>
    <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
    <relationshipLabel>Debt Schedules</relationshipLabel>
    <relationshipName>Debt_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>