force-app/main/default/objects/LLC_BI__Debt_Schedule__c/fields/LLC_BI__Total_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Monthly_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field represents the total of all the obligations owed on a monthly basis.</description>
    <label>Total Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>